# stockAnalysis

./: .env.example  .gitignore  README.md  history  pyproject.toml  requirements.txt  streamlit_app.py
.github/agents/: stock specilest-Apollo.agent.md
config/: universe.yaml
data/: fund_watchlist.txt  latest_fund_rank.csv  latest_scan.csv  latest_scan.meta.json  latest_scan_partial.csv  latest_scan_partial.meta.json  latest_snapshot.csv  market_snapshot_summary_history.csv  watchlist.txt
src/ashare_quant/: __init__.py  backtest.py  cli.py  config.py  data.py  strategy.py
src/ashare_quant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
